tabs fixed at top, shored up spacing in play tab so everything should just barely fit on small phones, made sure help text isn't too wide

--- a/src/App.css
+++ b/src/App.css
@@ -59,6 +59,10 @@
   width:45px;
 }
 
+.score-column > h5 {
+  margin: 5px;
+}
+
 .modal-overlay {
   position: fixed;
   top: 0;
@@ -192,4 +196,5 @@
 }
 
 #help-block {
+  max-width:800px;
 }
